--- a/data-science-curriculum-build-2/challenges/c01-titanic-assignment.Rmd
+++ b/data-science-curriculum-build-2/challenges/c01-titanic-assignment.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "RMS Titanic"
-author: "(Your name here)"
-date: 2020-
+author: "Aidan Schneider"
+date: 05-02-2025
 output:
   github_document:
     toc: true
@@ -52,11 +52,17 @@ df_titanic <- as_tibble(Titanic)
 
 ```{r q1-task}
 ## TASK: Perform a `glimpse` of df_titanic
+glimpse(df_titanic)
 ```
 
 **Observations**:
 
 - (List all variables here)
+- Class
+- Sex
+- Age
+- Survived
+- n
 
 ### __q2__ Skim the [Wikipedia article](https://en.wikipedia.org/wiki/RMS_Titanic) on the RMS Titanic, and look for a total count of souls aboard. Compare against the total computed below. Are there any differences? Are those differences large or small? What might account for those differences?
 
@@ -70,10 +76,11 @@ df_titanic %>% summarize(total = sum(n))
 
 - Write your observations here
 - Are there any differences?
-  - (Your response here)
+  - Yes, the dataset yields a total of 2201 passengers while the Wikipedia article reports 2224 passengers having been aboard. 
 - If yes, what might account for those differences?
-  - (Your response here)
-  - ...
+  - One probable explanation for this difference is that the dataset is incomplete. The developers of the dataset would have to gather data on those 23 missing passengers and fill it into the dataset. 
+  
+  
 
 ### __q3__ Create a plot showing the count of persons who *did* survive, along with aesthetics for `Class` and `Sex`. Document your observations below.
 
@@ -81,11 +88,34 @@ df_titanic %>% summarize(total = sum(n))
 
 ```{r q3-task}
 ## TASK: Visualize counts against `Class` and `Sex`
+
+
+df_titanic %>%
+  filter(Survived == "Yes") %>% 
+  ggplot(aes(x = Class, y = n, fill = Sex)) +
+  geom_col()
+
 ```
+```{r}
+
+df_titanic %>%
+  group_by(Class, Sex)
+  
+  filter(Survived == "Yes", Class != "Crew", Age != "Child") %>% 
+  group_by(Class, Sex)
+  ggplot(aes(x = Sex, y = n)) +
+  geom_col() 
+  
+  
+```
+
 
 **Observations**:
 
 - Write your observations here
+
+
+
 
 # Deeper Look
 <!-- -------------------------------------------------- -->
@@ -111,6 +141,12 @@ df_prop
 ### __q4__ Replicate your visual from q3, but display `Prop` in place of `n`. Document your observations, and note any new/different observations you make in comparison with q3. Is there anything *fishy* in your plot?
 
 ```{r q4-task}
+
+df_titanic %>%
+  filter(Survived == "Yes") %>% 
+  ggplot(aes(x = Class, y = Prop, fill = Sex)) +
+  geom_col()
+
 ```
 
 **Observations**:
