--- a/data-science-curriculum-build-2/challenges/c04-gapminder-assignment.Rmd
+++ b/data-science-curriculum-build-2/challenges/c04-gapminder-assignment.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Gapminder"
-author: "(Your name here)"
-date: 2020-
+author: Aidan Schneider
+date: 03-02-25
 output:
   github_document:
     toc: true
@@ -57,11 +57,22 @@ dataset?
 
 ```{r q0-task}
 ## TASK: Do your "first checks" here!
+
+gapminder %>% 
+  glimpse() %>% 
+  summary()
+
 ```
 
 **Observations**:
 
 - Write all variable names here
+- country: country of interest
+- continent: continent on which country is located
+- year: year in which the corresponding data has been collected
+- lifeExp: life expectancy for a country in a specific year
+- pop: population of the country in a specific year
+- gdpPercap: gdp per capita of a country in a specific year
 
 ### __q1__ Determine the most and least recent years in the `gapminder` dataset.
 
@@ -69,8 +80,16 @@ dataset?
 
 ```{r q1-task}
 ## TASK: Find the largest and smallest values of `year` in `gapminder`
-year_max <- NA_real_
-year_min <- NA_real_
+
+year_max <-
+  gapminder %>% 
+  pull(year) %>% 
+  max()
+
+year_min <-
+  gapminder %>% 
+  pull(year) %>% 
+  min()
 ```
 
 Use the following test to check your work.
@@ -96,26 +115,60 @@ You may encounter difficulties in visualizing these data; if so document your ch
 
 ```{r q2-task}
 ## TASK: Create a visual of gdpPercap vs continent
+
+df_q2 <- gapminder
+df_q2 %>% 
+  filter(year == year_min) %>%  
+  group_by(continent) %>% 
+  ggplot(aes(x = continent, y = gdpPercap)) +
+  geom_boxplot() +
+  labs(title = "GDP per Capita vs Continent in 1952",
+       x = "Continent",
+       y = "GDP per Capita")
+
 ```
 
 **Observations**:
 
 - Write your observations here
 
+I chose to make a box plot to compare the range of GDP Per Capita of each continent. The above plot shows that the 1st-3rd quartiles of each continent's GDP per Capita are all relatively the same, with a few outliers in the Americas and Asia boxplots.
+
 **Difficulties & Approaches**:
 
 - Write your challenges and your approach to solving them
+
+The greatest challenge was deciding what plot would best represent this data. I initially chose a bar plot, but found that the bar plot summed the GDP per Capita's of each country in each continent by stacking, which wasn't a good comparison method for making our analysis. I then opted to use a boxplot, which more effectively showed the spread of GDP per Capita's of each of the countries in each of the continents.
 
 ### __q3__ You should have found *at least* three outliers in q2 (but possibly many more!). Identify those outliers (figure out which countries they are).
 
 ```{r q3-task}
 ## TASK: Identify the outliers from q2
+
+df_q3 <- df_q2 %>%
+  filter(year == year_min) %>%
+  summarise(
+    Q1 = quantile(gdpPercap, 0.25),  
+    Q3 = quantile(gdpPercap, 0.75), 
+    IQR = IQR(gdpPercap)
+  ) %>%
+  mutate(
+    lower_bound = Q1 - 1.5 * IQR,
+    upper_bound = Q3 + 1.5 * IQR   
+  ) %>%
+  right_join(df_q2 %>% filter(year == year_min), by = character(0)) %>%  
+  filter(gdpPercap < lower_bound | gdpPercap > upper_bound)  
+
+df_q3
+
+
+
 ```
 
 **Observations**:
 
 - Identify the outlier countries from q2
-  - (Your response here)
+  - The outlier countries from q2 are: Australia, Bahrain, Canada, Denmark, Kuwait, the Netherlands, New Zealand, Norway, Switzerland, the UK, and the US.
 
 *Hint*: For the next task, it's helpful to know a ggplot trick we'll learn in an upcoming exercise: You can use the `data` argument inside any `geom_*` to modify the data that will be plotted *by that geom only*. For instance, you can use this trick to filter a set of points to label:
 
@@ -123,7 +176,6 @@ You may encounter difficulties in visualizing these data; if so document your ch
 ## NOTE: No need to edit, use ideas from this in q4 below
 gapminder %>%
   filter(year == max(year)) %>%
-
   ggplot(aes(continent, lifeExp)) +
   geom_boxplot() +
   geom_point(
@@ -139,11 +191,27 @@ gapminder %>%
 
 ```{r q4-task}
 ## TASK: Create a visual of gdpPercap vs continent
+
+
+gapminder %>% 
+  filter(year %in% c(year_min, year_max)) %>% 
+  group_by(continent) %>% 
+  ggplot(aes(continent, gdpPercap)) +
+  geom_boxplot(aes(fill = factor(year)), alpha = 0.6) +
+  geom_point(data = . %>% filter(country %in% c("United Kingdom", "United States", "Australia", "Bahrain", "Canada", "Denmark", "Kuwait", "Netherlands", "New Zealand", "Norway", "Switzerland")), 
+             aes(color = country), size = 2) + 
+  facet_wrap(~ year) +
+  labs(title = paste("GDP per Capita vs Year (", year_min, " and ", year_max, ")", sep = ""), x = "Year", y = "GDP per Capita")
+
 ```
 
 **Observations**:
 
 - Write your observations here
+
+- Most of the outliers' GDP Per Capita are above the third quartile of their respective continents, the only exception being New Zealand
+- Europe's outliers (Denmark, Netherlands, Norway, Switzerland) have a larger gap between them and the 3rd quartile in 1952 than in 2007. This could be attributed to the democratization of Europe that occured in the 1990's, causing Europe to overall become wealthier. 
+- Kuwait seems to be an extreme outlier in the 1950's, which could be attributed to their prosperous shipping and ship-building industry at the time
 
 # Your Own EDA
 <!-- -------------------------------------------------- -->
@@ -154,20 +222,76 @@ Now it's your turn! We just went through guided EDA considering the GDP per capi
 
 ```{r q5-task1}
 ## TASK: Your first graph
+
+gapminder %>%
+  group_by(year, continent) %>%
+  summarise(lifeExp_mean = mean(lifeExp, na.rm = TRUE)) %>%
+  ggplot(aes(x = year, y = lifeExp_mean, color = continent)) +
+  geom_line() +
+  labs(
+    title = "Mean Life Expectancy per Continent from 1952-2007",
+    x = "Year (yr)",
+    y = "Mean Life Expectancy (yr)")
+  
+
 ```
 
 - (Your notes and observations here)
+Question: How has average Life Expectancy changed in each of the world's continents from 1952 to 2007?
+
+Observations:
+- The plot above seems to suggest that the overall life expectancy across the world has increased since 1952
+- The plot's for each of the continents seem to have grown uniformly, but wealthier continent (such as the Americas and Europe) have a greater average mean life expectancy than poorer continents (such as Africa or Asia). 
+
 
 ```{r q5-task2}
 ## TASK: Your second graph
+
+gapminder %>%
+  group_by(country, continent) %>% 
+  summarise(gdpPercap_mean = mean(gdpPercap, na.rm = TRUE), lifeExp_mean = mean(lifeExp, na.rm = TRUE)) %>%    
+  ggplot(aes(x = gdpPercap_mean, y = lifeExp_mean, color = continent)) +
+  geom_point(aes(size = 3), alpha = 0.7) +  
+  scale_x_log10() + 
+  labs(
+    title = "GDP per Capita vs Life Expectancy by Country",
+    x = "GDP per Capita (Dollars, log scale)",
+    y = "Life Expectancy (yr)"
+  ) 
+
 ```
 
 - (Your notes and observations here)
+Question: How does GDP per Capita affect the life expectancy of a country?
+
+Observations:
+- GDP per Capita has a great affect on the life expectancy of a country
+- There is a positive correlation between gdp per capita and life expectancy
+- Countries in Africa and Asia have on average lower gdp per capita's than countries in Europe and the Americas
+
 
 ```{r q5-task3}
 ## TASK: Your third graph
+
+gapminder %>%
+  ggplot(aes(x = pop, y = lifeExp, color = continent)) + 
+  geom_point(alpha = 0.7) + 
+  scale_x_log10() + 
+  facet_wrap(~ continent) + 
+  labs(
+    title = "Population Growth vs Life Expectancy by Continent",
+    x = "Population (Log Scale)",
+    y = "Life Expectancy (yr)"
+  )
+
+
 ```
 
 - (Your notes and observations here)
+Question: How does the growth of population influence Life Expectancy?
+
+Observations:
+- The plots above show that there is a general positive correlation between an increase in population and life expectancy
+- There are a few clusters of points in Africa that do not follow this pattern, which could be due to overpopulation or an extreme event such as war and/or famine.
 
 
