--- a/data-science-curriculum-build-2/challenges/c07-monte-carlo-assignment.Rmd
+++ b/data-science-curriculum-build-2/challenges/c07-monte-carlo-assignment.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Estimating Pi With a Shotgun"
-author: "(Your name here)"
-date: 2020-
+author: "Aidan Schneider"
+date: 03-30-2025
 output:
   github_document:
     toc: true
@@ -111,8 +111,10 @@ Pick a sample size $n$ and generate $n$ points *uniform randomly* in the square 
 
 ```{r q1-task}
 ## TASK: Choose a sample size and generate samples
-n <- NA_real_ # Choose a sample size
-df_q1 <- NA # Generate the data
+n <- 100
+df_q1 <- 
+  tibble(x = seq(-5, +5, length.out = 100)) %>% 
+  mutate(y = dunif(x, min = -1, max = +1))
 ```
 
 Use the following to check that you've used the correct variable names. (NB. This does not check correctness.)
@@ -147,7 +149,11 @@ Answer the questions below.
 ```{r q2-task}
 ## TASK: Finish implementing this function
 stat <- function(x, y) {
-  # TODO: Finish implementing this function
+  if (x^2+y^2 <= 1) {
+    return(4)
+  } else {
+    return(0) 
+    }
 }
 ```
 
@@ -158,21 +164,19 @@ Implement your own assert statements. They should pass using your implementation
 
 # Check the value for points *inside* the circle
 assertthat::assert_that(
-  # tibble(x = ?, y = ?) %>% # Pick a point *inside* the circle
+  tibble(x = 0.5, y = 0.5) %>% # Pick a point *inside* the circle
     mutate(stat = stat(x, y)) %>% 
     pull(stat) %>% 
-    .[[1]] ==
-  # ???, # Write the correct value of stat() here
+    .[[1]] == 4,
   msg = "Incorrect value when a point is inside the circle"
 )
 
 # Check the value for points *outside* the circle
 assertthat::assert_that(
-  # tibble(x = ?, y = ?) %>% # Pick a point *outside* the circle
+  tibble(x = 1.5, y = 1.5) %>% # Pick a point *outside* the circle
     mutate(stat = stat(x, y)) %>% 
     pull(stat) %>% 
-    .[[1]] ==
-  # ???, # Write the correct value of stat() here
+    .[[1]] == 0,
   msg = "Incorrect value when a point is outside the circle"
 )
 print("Your assertions passed, but make sure they're checking the right thing!")
@@ -181,9 +185,12 @@ print("Your assertions passed, but make sure they're checking the right thing!")
 *Observations*
 
 - You chose a correct value of `stat(x, y)` when `x, y` is *outside* the circle. Why did you choose this value?
-  - (Justify your value here)
+  - Since the radius of the circle is 1, we know that (0.5, 0.5) is inside the circle and thus is an element of Sc.
+  
+  
 - You chose a correct value of `stat(x, y)` when `x, y` is *inside* the circle. Why did you choose this value?
-  - (Justify your value here)
+  -Since the radius of the circle is 1, we know that (1.5, 1.5) is outside the circle and thus not an element of Sc (but rather St).
+
 
 ### __q3__ Estimate $\pi$
 
@@ -192,8 +199,10 @@ Using your data in `df_q1`, estimate $\pi$.
 ```{r q3-task}
 ## TASK: Estimate pi using your data from q1
 df_q3 <- 
-  df_q1 %>% 
+  df_q1 %>%
   # TODO: Estimate pi as the column `pi_est`
+  mutate(inside_circle = ifelse(x^2 + y^2 <= 1, 1, 0)) %>%
+  summarise(pi_est = 4 * mean(inside_circle))
 df_q3
 ```
 
@@ -237,6 +246,8 @@ df_q4 <-
           # Estimate pi (pi_est) using the resampled data;
           # this should be *identical* to the
           # code you wrote for q3
+          mutate(inside_circle = ifelse(x^2 + y^2 <= 1, 1, 0)) %>%
+          summarise(pi_est = 4 * mean(inside_circle)) %>%
           pull(pi_est)
       }
     )
@@ -251,7 +262,7 @@ df_q4 %>%
 *Observations*
 
 - What is a range of plausible values, based on the sampling distribution you've generated?
-  - (Your response here)
+  - A range of plausible values would be 0.4-1.1
 
 ### __q5__ Bootstrap percentile confidence interval
 
@@ -265,8 +276,8 @@ df_q5 <-
   df_q4 %>% 
   summarize(
     # TODO: Compute pi_lo and pi_up
-    # pi_lo = ?
-    # pi_up = ?
+    pi_lo = quantile(pi_est, 0.025),
+    pi_up = quantile(pi_est, 0.075),
   )
 
 df_q5
@@ -281,21 +292,36 @@ Compute a CLT-based confidence interval for $\pi$ at the 95% confidence level (`
 *Hint 2*: You have computed the same thing (a 95% confidence interval) in both q5 and q6. If they disagree strongly, that suggests that you've done something *wrong* in one of the tasks....
 
 ```{r q6-task}
-df_q1 %>%
+df_q1 %>% 
+    mutate(
+    sample_mean = mean(x),
+    sd_uniform = sqrt((1 - (-1))^2 / 12),  
+    se = sd_uniform / sqrt(n),
+    lo = sample_mean - 1.96 * se,  
+    hi = sample_mean + 1.96 * se  
+    )
+  
+  
 ```
 
 **Observations**:
 
 - Does your intervals include the true value of $\pi$?
   - (Bootstrap CI: yes or no?)
+  No
   - (CLT CI: yes or no?)
+  No
 - How closely do your bootstrap CI and CLT CI agree?
   - (Your answer here)
+  They do not seem drastically far from eachother, but I am unsure as I may have calculated incorrectly.
 - Comment on the width of your CI(s). Would your estimate of $\pi$ be good enough for roughly estimating an area (e.g., to buy enough paint for an art project)? Would your estimate of $\pi$ be good enough for precisely calculating a trajectory (e.g., sending a rocket into orbit)?
   - (Good enough as a rough estimate?)
+  As a *very* rough estimate it would suffice
   - (Good enough as a precise estimate?)
+  This would not be sufficient for a precise estimate, it is very far from the true value of pi. 
 - What would be a *valid* way to make your CI more narrow?
   - (Your answer here)
+  I don't think I did the right steps to calculate pi using CI and CLT, so i'd appreciate feedback on where I went wrong. 
 
 # References
 <!-- -------------------------------------------------- -->
